[gd_scene load_steps=6 format=2]

[ext_resource path="res://Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Characters/Enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/ui/progress_bar_mini.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Hide"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -16, -12 ), Vector2( -16, -12 ), Vector2( 0, -12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0.5 ), Vector2( 1, 0.25 ), Vector2( 1e-05, 0.25 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16, -12 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 32, 16 ) ]
}

[node name="Enemy" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="PathTimer" type="Timer" parent="." index="4"]
wait_time = 0.5
autostart = true

[node name="HealthBar" type="TextureProgress" parent="." index="5"]
margin_left = -16.0
margin_top = -8.0
margin_right = 16.0
margin_bottom = 8.0
rect_scale = Vector2( 1, 0.5 )
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 3 )
tint_under = Color( 0.270588, 0.105882, 0.105882, 1 )
tint_progress = Color( 0.823529, 0.219608, 0.219608, 1 )

[node name="Tween" type="Tween" parent="HealthBar" index="0"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="HealthBar" index="1"]
anims/Hide = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="hp_changed" from="." to="." method="_on_hp_changed"]
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
